hyprland: layout tweaks

--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -1,3 +1,5 @@
+windowrulev2 = suppressevent maximize, class:.*
+
 # Special Workspaces
 workspace=special:scratch,gapsin:-50,gapsout:-50
 workspace=special:ask,gapsin:-50,gapsout:-50
@@ -141,13 +143,17 @@ animations {
 
 dwindle {
     pseudotile = yes
-    force_split = 2
-    preserve_split = true
+    # force_split = 2
+    # preserve_split = false
     special_scale_factor = 0.80
     no_gaps_when_only = 0
+    smart_split = true
 }
 
 master {
+    orientation = center
+    always_center_master = true
+    new_is_master = false
 }
 
 xwayland {
