--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -143,11 +143,10 @@ animations {
 
 dwindle {
     pseudotile = yes
-    # force_split = 2
-    # preserve_split = false
+    force_split = 2
+    preserve_split = true
     special_scale_factor = 0.80
     no_gaps_when_only = 0
-    smart_split = true
 }
 
 master {
