hypr: disable scratch workspace

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -55,8 +55,8 @@ bind = $mod CONTROL,    k,      movewindow, u
 bind = $mod CONTROL,    j,      movewindow, d
 
 # scratchpads
-bind = $mod CONTROL,    $enter, exec, [workspace special:scratch]tm startup scratch
-bind = $mod CONTROL,    $enter, togglespecialworkspace, scratch
+# bind = $mod CONTROL,    $enter, exec, [workspace special:scratch]tm startup scratch
+# bind = $mod CONTROL,    $enter, togglespecialworkspace, scratch
 
 # Workspaces
 
