hypr: just launch thunderbird normally

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -18,8 +18,8 @@ bind = $mod CONTROL,    e,      exec,   [float]nemo
 # bind = $mod,            b,      exec,   firefox && sleep 0.5 && hyprctl dispatch fakefullscreen
 bind = $mod,            b,      exec,   chromium --profile-directory="Default"
 bind = $mod SHIFT,      b,      exec,   chromium --profile-directory="ta"
-bind = $mod SHIFT,      m,      exec,   focusws email
-bind = $mod CONTROL,    m,      exec,   focusws spotify
+bind = $mod SHIFT,      m,      exec,   thunderbird
+bind = $mod CONTROL,    m,      exec,   spotify --disable-gpu --disable-software-rasterizer
 bind = $mod SHIFT,      g,      exec,   firefox "https://github.com/e-cal"
 bind = $mod SHIFT,      c,      exec,   hyprpicker -a
 bind = $mod SHIFT,      n,      exec,   obsidian --disable-gpu
