lazygit: use difftastic

--- a/shared/.config/lazygit/config.yml
+++ b/shared/.config/lazygit/config.yml
@@ -17,3 +17,6 @@ theme:
     - "#89b4fa" # Blue
   unstagedChangesColor:
     - red # Red
+git:
+  paging:
+    externalDiffCommand: difft --color=always
