hypr: disable bad talos bt controller at startup

--- a/shared/.config/hypr/startup.conf
+++ b/shared/.config/hypr/startup.conf
@@ -11,6 +11,7 @@ exec-once=/usr/lib/polkit-kde-authentication-agent-1
 
 # bluetooth le
 exec-once=sudo btmgmt le on
+exec-once=echo -e "select 58:6D:67:30:F6:91\npower off" | bluetoothctl
 
 # launch stuff
 exec-once=hyprpaper
