--- a/shared/.config/hypr/devices.conf
+++ b/shared/.config/hypr/devices.conf
@@ -3,11 +3,9 @@
 monitor = ,1920x1080,auto,1 # second monitor fallback (lower has higher priority for unnamed)
 monitor = eDP-1,preffered,0x0,1 # laptop screen
 # main dell monitor
-monitor = DP-1,2560x1440@144,0x0,1
-monitor = DP-2,2560x1440@144,auto,1
-monitor = DP-4,2560x1440@144,auto,1
-# sam monitor
-# monitor = DP-3,1920x1080,auto,1
+monitor = DP-1,2560x1440@144,auto-up,1
+# monitor = DP-2,2560x1440@144,auto-left,1
+# monitor = DP-4,2560x1440@144,auto-right,1
 # second monitor
 monitor = DP-5,preffered,0x0,1
 
@@ -45,7 +43,8 @@ device {
 
 device {
     name = at-translated-set-2-keyboard 
-    kb_options = caps:escape
+    # kb_options = caps:escape
+    # kb_layout = us-ecal
 }
 
 device {
