kbd: update keyd layout

--- a/shared/kbd/keyd.conf
+++ b/shared/kbd/keyd.conf
@@ -1,15 +1,47 @@
+# _copy_ to /etc/keyd/default.conf
+
+# [global]
+# overload_tap_timeout = 1000
+
 [ids]
 *
 
 [main]
-
-# capslock = overload(control, esc)
 capslock = esc
 esc = capslock
+d = overloadt(shift, d, 200)
+k = overloadt(shift, k, 200)
+rightalt = leftalt
 
 [shift]
 1 = +
-! = +
+2 = [
+3 = {
+4 = (
+5 = #
+6 = =
+7 = )
+8 = }
+9 = ]
+0 = *
+
+[alt]
+x = @
+c = %
+v = &
+/ = !
+. = $
+, = ^
+m = -
+n = _
+
+[alt+shift]
 h = left
+j = down
+k = up
+l = right
+u = S-left
+o = S-right
+
 
 
