hypr: switch to zen-browser

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -16,7 +16,8 @@ bind = $mod SHIFT,      s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flamesh
 bind = $mod CONTROL,    s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot full
 bind = $mod CONTROL,    e,      exec,   [float]nemo
 # bind = $mod,            b,      exec,   firefox && sleep 0.5 && hyprctl dispatch fakefullscreen
-bind = $mod,            b,      exec,   chromium --profile-directory="Default"
+# bind = $mod,            b,      exec,   chromium --profile-directory="Default"
+bind = $mod,            b,      exec,   zen-browser
 bind = $mod SHIFT,      b,      exec,   chromium --profile-directory="work"
 bind = $mod SHIFT,      m,      exec,   thunderbird
 bind = $mod CONTROL,    m,      exec,   spotify --disable-gpu --disable-software-rasterizer
@@ -106,21 +107,21 @@ bind = $mod,        bracketright,   movetoworkspacesilent, 9
 bind = $mod SHIFT,  8,              movetoworkspacesilent, 10
 
 # no nums
-bind = $mod, q, exec, focusws 1
-bind = $mod, w, exec, focusws 2
-bind = $mod, e, exec, focusws 3
-bind = $mod, r, exec, focusws 4
-bind = $mod, t, exec, focusws 5
+# bind = $mod, q, exec, focusws 1
+# bind = $mod, w, exec, focusws 2
+# bind = $mod, e, exec, focusws 3
+# bind = $mod, r, exec, focusws 4
+# bind = $mod, t, exec, focusws 5
 # bind = $mod, y, exec, focusws 6
 # bind = $mod, u, exec, focusws 7
 # bind = $mod, i, exec, focusws 8
 # bind = $mod, o, exec, focusws 9
 # bind = $mod, p, exec, focusws 10
-bind = $mod SHIFT, q, movetoworkspacesilent, 1
-bind = $mod SHIFT, w, movetoworkspacesilent, 2
-bind = $mod SHIFT, e, movetoworkspacesilent, 3
-bind = $mod SHIFT, r, movetoworkspacesilent, 4
-bind = $mod SHIFT, t, movetoworkspacesilent, 5
+# bind = $mod SHIFT, q, movetoworkspacesilent, 1
+# bind = $mod SHIFT, w, movetoworkspacesilent, 2
+# bind = $mod SHIFT, e, movetoworkspacesilent, 3
+# bind = $mod SHIFT, r, movetoworkspacesilent, 4
+# bind = $mod SHIFT, t, movetoworkspacesilent, 5
 # bind = $mod SHIFT, y, movetoworkspacesilent, 6
 # bind = $mod SHIFT, u, movetoworkspacesilent, 7
 # bind = $mod SHIFT, i, movetoworkspacesilent, 8
