hypr: hack around broken clipboard in flameshot

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -12,8 +12,8 @@ bind = $mod,            c,      exec,   [float]kitty --hold sh -c "zsh -c 'nvim 
 bind = $mod,            c,      exec,   sleep 0.5 && hyprctl --batch "dispatch setfloating; dispatch resizeactive exact 33% 66%; dispatch centerwindow"
 bind = $mod SHIFT,      $enter, exec,   albert show
 bind = $mod,            o,      exec,   albert show
-bind = $mod SHIFT,      s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot gui
-bind = $mod CONTROL,    s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot full
+bind = $mod SHIFT,      s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot gui && wl-copy < ~/screenshot.png && rm ~/screenshot.png
+bind = $mod CONTROL,    s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot full && wl-copy < ~/screenshot.png && rm ~/screenshot.png
 bind = $mod CONTROL,    e,      exec,   [float]nemo
 # bind = $mod,            b,      exec,   firefox && sleep 0.5 && hyprctl dispatch fakefullscreen
 # bind = $mod,            b,      exec,   chromium --profile-directory="Default"
