nixos: upgrade to 24.11

--- a/shared/.config/tmux/tmux.conf
+++ b/shared/.config/tmux/tmux.conf
@@ -18,7 +18,7 @@ set -s copy-command 'wl-copy'
 
 # Key Bindings
 # prefix: C-Space
-set -g prefix C-@
+set -g prefix C-Space
 
 # command to check if in nvim
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
