--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -35,7 +35,7 @@ bind = $mod,            y,      exec,   gromit-mpx --redo
 bind = $mod,            f,      togglefloating,
 bind = $mod CONTROL,    f,      exec,   togglebar
 bind = $mod SHIFT,      f,      fullscreen, 
-bind = $mod ALT,        f,      fakefullscreen, 
+bind = $mod ALT,        f,      fullscreen, 1 
 bind = $mod CONTROL,    p,      pseudo, 
 bind = $mod,            tab,    togglesplit, 
 
