--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -88,10 +88,12 @@ decoration {
     }
     dim_special = 0.08
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow {
+        enabled = true
+        range = 4
+        render_power = 3
+        color = rgba(1a1a1aee)
+    }
 }
 
 
@@ -146,13 +148,12 @@ dwindle {
     force_split = 2
     preserve_split = true
     special_scale_factor = 0.80
-    no_gaps_when_only = 0
 }
 
 master {
     orientation = center
     always_center_master = true
-    new_is_master = false
+    new_status = master
 }
 
 xwayland {
