hypr: new fakefullscreen

--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -50,6 +50,9 @@ windowrulev2=noanim,class:^Xdg-desktop-portal-gtk$
 windowrulev2=noborder,class:^Xdg-desktop-portal-gtk$
 windowrulev2=noshadow,class:^Xdg-desktop-portal-gtk$
 
+# zen browser
+windowrulev2 = fullscreenstate 0 2,class:(zen)
+
 # Screenshare through xwaylandvideobridge
 windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
