--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -14,7 +14,7 @@ bind = $mod,            o,      exec,   albert show
 bind = $mod SHIFT,      s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot gui && wl-copy < ~/screenshot.png && rm ~/screenshot.png
 bind = $mod CONTROL,    s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot full && wl-copy < ~/screenshot.png && rm ~/screenshot.png
 bind = $mod CONTROL,    e,      exec,   [float]nemo
-bind = $mod,            b,      exec,   zen-browser
+bind = $mod,            b,      exec,   zen
 bind = $mod SHIFT,      b,      exec,   chromium --profile-directory="work"
 bind = $mod SHIFT,      m,      exec,   thunderbird
 bind = $mod CONTROL,    m,      exec,   spotify --disable-gpu --disable-software-rasterizer
