--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -52,7 +52,7 @@ windowrulev2=noshadow,class:^Xdg-desktop-portal-gtk$
 
 # zen browser
 windowrulev2 = fullscreenstate 0 2,class:(zen)
-windowrulev2 = fullscreenstate 0 0,title:(.*Save.*)
+windowrulev2 = fullscreenstate 0 0,title:(.*[sS]ave.*)
 windowrulev2 = fullscreenstate 0 0,title:(.*Upload.*)
 
 # Screenshare through xwaylandvideobridge
