hypr: tweaks to how albert launcher is handled

--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -29,7 +29,7 @@ windowrule=size 100% 100%,Gromit-mpx
 
 # Albert launcher
 # windowrule=nofullscreenrequest,albert
-windowrule=float,albert
+# windowrule=float,albert
 windowrule=noblur,albert
 windowrule=noanim,albert
 windowrule=noborder,albert
