--- a/shared/.config/tmux/tmux.conf
+++ b/shared/.config/tmux/tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "xterm-256color"
+# set -g default-terminal "xterm-256color"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 set -g history-limit 10000
