--- a/shared/.config/ghostty/config
+++ b/shared/.config/ghostty/config
@@ -34,6 +34,17 @@ font-thicken = true
 adjust-font-baseline = -1
 adjust-cell-height = 2
 
+keybind = alt+1=unbind
+keybind = alt+2=unbind
+keybind = alt+3=unbind
+keybind = alt+4=unbind
+keybind = alt+5=unbind
+keybind = alt+6=unbind
+keybind = alt+7=unbind
+keybind = alt+8=unbind
+keybind = alt+9=unbind
+keybind = alt+0=unbind
+
 theme = catppuccin-mocha
 background = #171724
 cursor-color = #CDD6F4
