hyprland: fix breaking changes on update

--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -21,25 +21,25 @@ windowrule=opacity 1.0 override 1.0 override,title:.*S[0-9]+:E[0-9]+.* # tv
 
 # Gromit-mpx
 workspace=special:gromit, gapsin:0, gapsout:0, on-created-empty: gromit-mpx -a
-windowrule=noblur,Gromit-mpx
-windowrule=noshadow,Gromit-mpx
-windowrule=opacity 1.0 override 1.0 override,Gromit-mpx
-windowrule=suppressevent fullscreen,Gromit-mpx
-windowrule=size 100% 100%,Gromit-mpx
+windowrule=noblur,class:Gromit-mpx
+windowrule=noshadow,class:Gromit-mpx
+windowrule=opacity 1.0 override 1.0 override,class:Gromit-mpx
+windowrule=suppressevent fullscreen,class:Gromit-mpx
+windowrule=size 100% 100%,class:Gromit-mpx
 
 # Albert launcher
 # windowrule=nofullscreenrequest,albert
 # windowrule=float,albert
-windowrule=noblur,albert
-windowrule=noanim,albert
-windowrule=noborder,albert
-windowrule=noshadow,albert
-windowrule=dimaround,albert
+windowrule=noblur,class:albert
+windowrule=noanim,class:albert
+windowrule=noborder,class:albert
+windowrule=noshadow,class:albert
+windowrule=dimaround,class:albert
 
-windowrule=float,qalculate-gtk
-windowrule=noanim,qalculate-gtk
-windowrule=opacity 1.0 override 1.0 override,qalculate-gtk
-windowrule=nodim,qalculate-gtk
+windowrule=float,class:qalculate-gtk
+windowrule=noanim,class:qalculate-gtk
+windowrule=opacity 1.0 override 1.0 override,class:qalculate-gtk
+windowrule=nodim,class:qalculate-gtk
 
 # chromium
 windowrulev2=noanim,class:^$,title:^$
@@ -157,7 +157,6 @@ dwindle {
 
 master {
     orientation = center
-    always_center_master = true
     new_status = master
 }
 
