--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -113,39 +113,52 @@ misc {
 animations {
     enabled = yes
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    bezier = spaces, 0.45, -0.5, 0.265, 1.35 
-    bezier = resize, 0.5, -0.9, 0.43, 1.23
-    bezier = inmove, 0.07, 0.9, 0.3, 1.26
-    bezier = linear, 0, 0, 1, 1
+    bezier = easeOutExpo, 0.16, 1, 0.3, 1
+    bezier = easeInExpo, 0.7, 0, 0.84, 0
+    bezier = easeOutQuad, 0.5, 1, 0.89, 1
+    bezier = easeOutQuint, 0.22, 1, 0.36, 1
+    bezier = easeOutCirc, 0, 0.55, 0.45, 1
 
-    # animation=NAME,ONOFF,SPEED,CURVE,STYLE
 
+    # animation names: styles
     # global
-    #   ↳ windows - styles: slide, popin
-    #     ↳ windowsIn - window open
-    #     ↳ windowsOut - window close
+    #   ↳ windows - styles: slide, popin, gnomed
+    #     ↳ windowsIn - window open - styles: same as windows
+    #     ↳ windowsOut - window close - styles: same as windows
     #     ↳ windowsMove - everything in between, moving, dragging, resizing.
+    #   ↳ layers - styles: slide, popin, fade
+    #     ↳ layersIn - layer open
+    #     ↳ layersOut - layer close
     #   ↳ fade
-    #     ↳ fadeIn - fade in (open) -> layers and windows
-    #     ↳ fadeOut - fade out (close) -> layers and windows
+    #     ↳ fadeIn - fade in for window open
+    #     ↳ fadeOut - fade out for window close
     #     ↳ fadeSwitch - fade on changing activewindow and its opacity
     #     ↳ fadeShadow - fade on changing activewindow for shadows
     #     ↳ fadeDim - the easing of the dimming of inactive windows
+    #     ↳ fadeLayers - for controlling fade on layers
+    #       ↳ fadeLayersIn - fade in for layer open
+    #       ↳ fadeLayersOut - fade out for layer close
     #   ↳ border - for animating the border's color switch speed
     #   ↳ borderangle - for animating the border's gradient angle - styles: once (default), loop
-    #   ↳ workspaces - styles: slide, slidevert, fade
+    #   ↳ workspaces - styles: slide, slidevert, fade, slidefade, slidefadevert
+    #     ↳ workspacesIn - styles: same as workspaces
+    #     ↳ workspacesOut - styles: same as workspaces
     #     ↳ specialWorkspace - styles: same as workspaces
+    #       ↳ specialWorkspaceIn - styles: same as workspaces
+    #       ↳ specialWorkspaceOut - styles: same as workspaces
 
-    animation = windows, 1, 5, inmove, slide
-    animation = windowsOut, 1, 3, inmove, popin
-    animation = windowsMove, 1, 1, linear, slide
+    # animation=NAME, ONOFF, SPEED, CURVE, STYLE
+    animation = windows, 1, 2.5, easeOutExpo, popin
+    animation = windowsOut, 1, 3.33, easeInExpo, popin
+    animation = windowsMove, 1, 1, easeOutExpo, slide
 
-    animation = border, 1, 12, default
-    animation = fade, 1, 7, default
-    animation = fadeOut, 1, 7, linear
-    animation = workspaces, 1, 1.5, linear, fade
-    animation = specialWorkspace, 1, 5, inmove, fade
+    animation = fade, 1, 3.33, easeOutCirc
+    animation = fadeOut, 1, 3, easeInExpo
+
+    animation = workspaces, 0 #, 1, easeOutExpo, fade
+    animation = specialWorkspace, 1, 5, easeOutExpo, slidevert
+
+    animation = border, 0
 }
 
 dwindle {
