--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -150,7 +150,7 @@ animations {
     # animation=NAME, ONOFF, SPEED, CURVE, STYLE
     animation = windows, 1, 2.5, easeOutExpo, popin
     animation = windowsOut, 1, 3.33, easeInExpo, popin
-    animation = windowsMove, 1, 1, easeOutExpo, slide
+    animation = windowsMove, 0 #, 1, easeInExpo, popin
 
     animation = fade, 1, 3.33, easeOutCirc
     animation = fadeOut, 1, 3, easeInExpo
