tmux+nvim: replace navigator with smart-splits

--- a/shared/.config/tmux/tmux.conf
+++ b/shared/.config/tmux/tmux.conf
@@ -1,6 +1,8 @@
 # set -g default-terminal "xterm-256color"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
 set -g history-limit 10000
 
 set -g base-index 1
@@ -20,8 +22,6 @@ set -s copy-command 'wl-copy'
 # prefix: C-Space
 set -g prefix C-Space
 
-# command to check if in nvim
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 setw -g mode-keys vi
 
 # toggle mouse support with m
@@ -53,21 +53,15 @@ bind-key R source-file ~/.config/tmux/tmux.conf
 bind-key v split-window -h
 bind-key s split-window -v
 
-# bind-key J resize-pane -D 5
-# bind-key K resize-pane -U 5
-# bind-key H resize-pane -L 5
-# bind-key L resize-pane -R 5
-
-bind-key -n M-J resize-pane -D 5
-bind-key -n M-K resize-pane -U 5
-bind-key -n M-H resize-pane -L 5
-bind-key -n M-L resize-pane -R 5
-
-
 bind-key -n M-h if-shell "$is_vim" "send-keys M-h" "select-pane -L"
 bind-key -n M-j if-shell "$is_vim" "send-keys M-j" "select-pane -D"
 bind-key -n M-k if-shell "$is_vim" "send-keys M-k" "select-pane -U"
 bind-key -n M-l if-shell "$is_vim" "send-keys M-l" "select-pane -R"
+
+bind-key -n M-J if-shell "$is_vim" "send-keys M-J" "resize-pane -D 5"
+bind-key -n M-K if-shell "$is_vim" "send-keys M-K" "resize-pane -U 5"
+bind-key -n M-H if-shell "$is_vim" "send-keys M-H" "resize-pane -L 5"
+bind-key -n M-L if-shell "$is_vim" "send-keys M-L" "resize-pane -R 5"
 
 bind-key -n M-Left  if-shell "$is_vim" "send-keys C-Left"   "resize-pane -L"
 bind-key -n M-Right if-shell "$is_vim" "send-keys C-Right"  "resize-pane -R"
