hypr: windowed fullscreen chromium

--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -49,6 +49,7 @@ windowrulev2=noblur,class:^Xdg-desktop-portal-gtk$
 windowrulev2=noanim,class:^Xdg-desktop-portal-gtk$
 windowrulev2=noborder,class:^Xdg-desktop-portal-gtk$
 windowrulev2=noshadow,class:^Xdg-desktop-portal-gtk$
+windowrulev2=fullscreenstate 0 2,class:(chromium-browser)
 
 # zen browser
 windowrulev2 = fullscreenstate 0 2,class:(zen)
