tmux: launch claude in split

--- a/shared/.config/tmux/tmux.conf
+++ b/shared/.config/tmux/tmux.conf
@@ -109,7 +109,9 @@ bind-key S run-shell "tmux choose-session"
 bind-key t run-shell "toggleterm h"
 bind-key T run-shell "toggleterm v"
 bind-key c split-window -h -l 30% -c '#{pane_current_path}' 'nvim -c ChatNew'
-bind-key C new-window -n chat -c '#{pane_current_path}' 'nvim -c ChatNew'
+# bind-key C new-window -n chat -c '#{pane_current_path}' 'nvim -c ChatNew'
+# bind-key C split-window -h -l 30% -c '#{pane_current_path}' 'TERM_PROGRAM= ~/scripts/claude'
+bind-key C run-shell "tmux-claude"
 bind-key g display-popup -d "#{pane_current_path}" -w "75%" -h "75%" -E "git status -s && lazygit || (cd ~/.dotfiles && lazygit)"
 
 run "$HOME/.config/tmux/theme"
