--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -8,7 +8,7 @@ bind = $mod,            x,      killactive,
 # open stuff
 bind = $mod,            $enter, exec,   ghostty
 bind = $mod,            c,      exec,   [float; center; size 33% 66%]ghostty --initial-command="zsh -c 'nvim -c \"ChatOpen tmp.chat\"' && zsh"
-bind = $mod SHIFT,      $enter, exec,   albert show
+bind = $mod SHIFT,      $enter, exec,   albert show && hyprctl dispatch killactive && sleep 0.1 && albert show
 bind = $mod,            o,      exec,   albert show
 bind = $mod SHIFT,      s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot gui && wl-copy < ~/screenshot.png && rm ~/screenshot.png
 bind = $mod CONTROL,    s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot full && wl-copy < ~/screenshot.png && rm ~/screenshot.png
