--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -8,6 +8,7 @@ bind = $mod,            x,      killactive,
 # open stuff
 bind = $mod,            $enter, exec,   ghostty
 bind = $mod,            c,      exec,   [float; center; size 33% 66%]ghostty --initial-command="zsh -c 'nvim -c \"ChatOpen tmp.chat\"' && zsh"
+bind = $mod SHIFT,      c,      exec,   launch-code-agent
 bind = $mod SHIFT,      $enter, exec,   albert show && sleep 0.1 && hyprctl dispatch killactive && sleep 0.1 && albert show
 bind = $mod,            o,      exec,   albert show
 bind = $mod SHIFT,      s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot gui && wl-copy < ~/screenshot.png && rm ~/screenshot.png
@@ -17,7 +18,7 @@ bind = $mod,            b,      exec,   zen -P default
 bind = $mod SHIFT,      b,      exec,   zen -P redbit
 bind = $mod SHIFT,      m,      exec,   thunderbird
 bind = $mod CONTROL,    m,      exec,   spotify --disable-gpu --disable-software-rasterizer
-bind = $mod SHIFT,      c,      exec,   hyprpicker -a
+bind = $mod ALT,        c,      exec,   hyprpicker -a
 bind = $mod SHIFT,      n,      exec,   obsidian --disable-gpu
 bind = $mod SHIFT,      z,      exec,   zotero
 
