opencode: change small model to gemini flash

--- a/shared/.config/opencode/opencode.jsonc
+++ b/shared/.config/opencode/opencode.jsonc
@@ -3,7 +3,7 @@
     "autoupdate": false,
     "theme": "catppuccin",
     "model": "openrouter/gpt-5",
-    "small_model": "openrouter/mistralai/mistral-small-3.1-24b-instruct",
+    "small_model": "openrouter/google/gemini-2.5-flash",
     "permission": {
         "edit": "ask",
         "bash": "ask",
@@ -17,10 +17,10 @@
         "project_init": "<leader>i",
         "tool_details": "<leader>d",
         "thinking_blocks": "<leader>b",
-        "session_export": "<leader>x",
+        "session_export": "none",
         "session_new": "<leader>n",
         "session_list": "<leader>l",
-        "session_share": "<leader>s",
+        "session_share": "none",
         "session_unshare": "none",
         "session_interrupt": "esc",
         "session_compact": "<leader>c",
