hyprland: add volume binds and change default monitor

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -124,6 +124,10 @@ bind=,0,exec,brightness set 100
 bind=,k,exec,volume up
 bind=,j,exec,volume down
 
+
+bind=,XF86AudioRaiseVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ 50% 35%
+bind=,XF86AudioLowerVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ 50% 50%
+
 # exit
 bind=SHIFT,grave,submap,reset
 bind=,grave,submap,reset
@@ -139,6 +143,8 @@ bind=,9,submap,reset
 bind=,0,submap,reset
 bind=,Escape,submap,reset 
 bind=,Caps_Lock,submap,reset 
+bind=,XF86AudioRaiseVolume,submap,reset
+bind=,XF86AudioLowerVolume,submap,reset
 submap=reset
 
 
