--- a/shared/.config/hypr/devices.conf
+++ b/shared/.config/hypr/devices.conf
@@ -1,24 +1,10 @@
-# See https://wiki.hyprland.org/Configuring/Monitors/
+monitor = ,1920x1080,auto,1 # fallback
+monitor = eDP-1,preffered,auto,1 # laptop
 
-monitor = ,1920x1080,auto,1 # second monitor fallback (lower has higher priority for unnamed)
-monitor = eDP-1,preffered,auto,1 # laptop screen
-# main dell monitor
-monitor = DP-1,2560x1440@144,auto,1, transform, 3
-monitor = DP-2,2560x1440@144,auto-right,1
-# monitor = DP-2,3840x2160@144,auto-right,1
-# monitor = DP-4,2560x1440@144,auto-right,1
-# second monitor
-monitor = DP-5,preffered,auto,1
+monitor = HDMI-A-1,3840x2160@144,0x0,1.5
+monitor = DP-2,2560x1440@144,-1440x-580,1,transform,1
 
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us
-    kb_variant=
-    kb_model=
-    # https://gist.github.com/jatcwang/ae3b7019f219b8cdc6798329108c9aee
-    kb_options=
-    kb_rules=
-
     follow_mouse = 1
 
     sensitivity = 0 # [-1.0, 1.0]
