--- a/shared/.config/hypr/devices.conf
+++ b/shared/.config/hypr/devices.conf
@@ -1,8 +1,14 @@
 monitor = ,1920x1080,auto,1 # fallback
 monitor = eDP-1,preffered,auto,1 # laptop
 
-monitor = HDMI-A-1,3840x2160@144,0x0,1.5
-monitor = DP-2,2560x1440@144,-1440x-580,1,transform,1
+monitor = DP-1,3840x2160@144,0x0,1.25
+# monitorv2 {
+#     output = DP-1
+#     mode = 3840x2160@144
+#     position = 0x0
+#     scale = 1.5
+# }
+monitor = DP-2,2560x1440@144,auto-left,1 #,transform,1
 
 input {
     follow_mouse = 1
