--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -125,8 +125,10 @@ bind=,k,exec,volume up
 bind=,j,exec,volume down
 
 
-bind=,XF86AudioRaiseVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ 50% 40%
-bind=,XF86AudioLowerVolume,exec,pactl set-sink-volume @DEFAULT_SINK@ 50% 50%
+bind=,XF86MonBrightnessUp,exec,  pactl set-sink-volume @DEFAULT_SINK@ +5% +0%
+bind=,XF86MonBrightnessDown,exec,pactl set-sink-volume @DEFAULT_SINK@ -5% -0%
+bind=,XF86AudioRaiseVolume,exec, pactl set-sink-volume @DEFAULT_SINK@ +0% +5%
+bind=,XF86AudioLowerVolume,exec, pactl set-sink-volume @DEFAULT_SINK@ -0% -5%
 
 # exit
 bind=SHIFT,grave,submap,reset
@@ -143,8 +145,8 @@ bind=,9,submap,reset
 bind=,0,submap,reset
 bind=,Escape,submap,reset 
 bind=,Caps_Lock,submap,reset 
-bind=,XF86AudioRaiseVolume,submap,reset
-bind=,XF86AudioLowerVolume,submap,reset
+# bind=,XF86AudioRaiseVolume,submap,reset
+# bind=,XF86AudioLowerVolume,submap,reset
 submap=reset
 
 
@@ -152,6 +154,7 @@ submap=reset
 bind = ,XF86AudioRaiseVolume, exec, volume up
 bind = ,XF86AudioLowerVolume, exec, volume down
 bind = ,XF86AudioMute, exec, volume mute
+bind = ,XF86AudioPlay, exec, playerctl play-pause
 bind = ,XF86AudioPlay, exec, playerctl play-pause
 
 # Mouse
