hyprland: no preserve split

--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -164,7 +164,8 @@ animations {
 dwindle {
     pseudotile = yes
     force_split = 2
-    preserve_split = true
+    preserve_split = false
+    # smart_split = true
     special_scale_factor = 0.80
 }
 
