hyprland: overhaul fixing monitors and new screenshot tool

--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -14,10 +14,10 @@ windowrule=opacity 1.0 override 1.0 override,title:.*Twitch.*
 windowrule=opacity 1.0 override 1.0 override,title:.*S[0-9]+:E[0-9]+.* # tv
 
 # Flameshot
-# windowrule=suppressevent fullscreen,flameshot
-# windowrule=float,flameshot
-# windowrule=monitor 1,flameshot
-# windowrule=move 0 0,flameshot
+windowrule=suppressevent fullscreen,title:flameshot
+windowrule=float,title:flameshot
+windowrule=monitor 1,title:flameshot
+windowrule=move 0 0,title:flameshot
 
 # Gromit-mpx
 workspace=special:gromit, gapsin:0, gapsout:0, on-created-empty: gromit-mpx -a
@@ -108,7 +108,12 @@ misc {
     animate_manual_resizes = true
     always_follow_on_dnd = true
     enable_swallow = false
+    # vrr = 1
 }
+
+# cursor {
+#     no_break_fs_vrr = 1
+# }
 
 animations {
     enabled = yes
