--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -11,8 +11,7 @@ bind = $mod,            c,      exec,   [float; center; size 33% 66%]ghostty --i
 bind = $mod SHIFT,      c,      exec,   launch-opencode
 bind = $mod SHIFT,      $enter, exec,   albert show && sleep 0.1 && hyprctl dispatch killactive && sleep 0.1 && albert show
 bind = $mod,            o,      exec,   albert show
-bind = $mod SHIFT,      s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot gui && wl-copy < ~/screenshot.png && rm ~/screenshot.png
-bind = $mod CONTROL,    s,      exec,   [noanim]XDG_CURRENT_DESKTOP=sway flameshot full && wl-copy < ~/screenshot.png && rm ~/screenshot.png
+bind = $mod SHIFT,      s,      exec,   [noanim]hyprshot -m region --raw | satty -f - -o screenshot.png --copy-command wl-copy --early-exit
 bind = $mod CONTROL,    e,      exec,   [float]nemo
 bind = $mod,            b,      exec,   zen
 bind = $mod SHIFT,      m,      exec,   thunderbird
