--- a/shared/.config/hypr/devices.conf
+++ b/shared/.config/hypr/devices.conf
@@ -1,14 +1,15 @@
-monitor = ,1920x1080,auto,1 # fallback
+# monitor = ,1920x1080,auto,1 # fallback
 monitor = eDP-1,preffered,auto,1 # laptop
 
-monitor = DP-1,3840x2160@144,0x0,1.25
+# monitor = DP-1,3840x2160@120,0x0,1.25
 # monitorv2 {
 #     output = DP-1
 #     mode = 3840x2160@144
 #     position = 0x0
 #     scale = 1.5
 # }
-monitor = DP-2,2560x1440@144,auto-left,1 #,transform,1
+# monitor = DP-2,disable
+# monitor = DP-2,1920x1080@144,auto-left,1
 
 input {
     follow_mouse = 1
