--- a/shared/.config/hypr/startup.conf
+++ b/shared/.config/hypr/startup.conf
@@ -21,3 +21,7 @@ exec-once=solaar -w hide
 
 exec-once=~/.config/hypr/scripts/startup
 exec-once=~/.config/hypr/scripts/event-handlers
+exec-once=ghostty
+
+exec-once=hyprctl keyword monitor "DP-1,3840x2160@120,0x0,1.25"
+exec-once=hyprctl keyword monitor "DP-2,2560x1440@144,auto-left,1"
