hyprland: preserve split

--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -169,7 +169,7 @@ animations {
 dwindle {
     pseudotile = yes
     force_split = 2
-    preserve_split = false
+    preserve_split = true
     # smart_split = true
     special_scale_factor = 0.80
 }
