hyprland: add hyprsunset for brightness control

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -7,18 +7,16 @@ bind = $mod,            x,      killactive,
 
 # open stuff
 bind = $mod,            $enter, exec,   ghostty
+bind = $mod,            b,      exec,   helium
+bind = $mod SHIFT,      b,      exec,   zen
+bind = $mod SHIFT,      $enter, exec,   albert show && sleep 0.1 && hyprctl dispatch killactive && sleep 0.1 && albert show
 bind = $mod,            c,      exec,   [float; center; size 33% 66%]ghostty --initial-command="zsh -c 'nvim -c \"ChatOpen tmp.chat\"' && zsh"
 bind = $mod SHIFT,      c,      exec,   launch-opencode
-bind = $mod SHIFT,      $enter, exec,   albert show && sleep 0.1 && hyprctl dispatch killactive && sleep 0.1 && albert show
-bind = $mod,            o,      exec,   albert show
-bind = $mod SHIFT,      s,      exec,   [noanim]hyprshot -m region --raw | satty -f - -o screenshot.png --copy-command wl-copy --early-exit
 bind = $mod CONTROL,    e,      exec,   [float]nemo
-bind = $mod,            b,      exec,   zen
+bind = $mod SHIFT,      s,      exec,   [noanim]hyprshot -m region -o /tmp -f screenshot.png --freeze && sleep 0.1 && satty -f /tmp/screenshot.png -o screenshot.png --copy-command wl-copy --early-exit
+bind = $mod,            o,      exec,   albert show
 bind = $mod SHIFT,      m,      exec,   thunderbird
-bind = $mod CONTROL,    m,      exec,   spotify --disable-gpu --disable-software-rasterizer
 bind = $mod ALT,        c,      exec,   hyprpicker -a
-bind = $mod SHIFT,      n,      exec,   obsidian --disable-gpu
-bind = $mod SHIFT,      z,      exec,   zotero
 
 bind = $mod SHIFT,      d,      togglespecialworkspace, gromit
 bind = $mod,            z,      exec,   gromit-mpx --undo
@@ -27,9 +25,9 @@ bind = $mod,            y,      exec,   gromit-mpx --redo
 
 # Layout
 bind = $mod,            f,      togglefloating,
-bind = $mod CONTROL,    f,      exec,   togglebar
+bind = $mod CONTROL,    b,      exec,   togglebar
 bind = $mod SHIFT,      f,      fullscreen, 
-bind = $mod ALT,        f,      fullscreenstate, 0 2
+bind = $mod CONTROL,    f,      fullscreenstate, 0 2
 bind = $mod CONTROL,    p,      pseudo, 
 bind = $mod,            tab,    togglesplit, 
 
@@ -124,10 +122,10 @@ bind=,k,exec,volume up
 bind=,j,exec,volume down
 
 
-bind=,XF86MonBrightnessUp,exec,  pactl set-sink-volume @DEFAULT_SINK@ +5% +0%
-bind=,XF86MonBrightnessDown,exec,pactl set-sink-volume @DEFAULT_SINK@ -5% -0%
-bind=,XF86AudioRaiseVolume,exec, pactl set-sink-volume @DEFAULT_SINK@ +0% +5%
-bind=,XF86AudioLowerVolume,exec, pactl set-sink-volume @DEFAULT_SINK@ -0% -5%
+bind=,XF86MonBrightnessUp,exec,   volume left-up
+bind=,XF86MonBrightnessDown,exec, volume left-down
+bind=,XF86AudioRaiseVolume,exec,  volume right-up
+bind=,XF86AudioLowerVolume,exec,  volume right-down
 
 # exit
 bind=SHIFT,grave,submap,reset
@@ -155,6 +153,8 @@ bind = ,XF86AudioLowerVolume, exec, volume down
 bind = ,XF86AudioMute, exec, volume mute
 bind = ,XF86AudioPlay, exec, playerctl play-pause
 bind = ,XF86AudioPlay, exec, playerctl play-pause
+bind=,XF86MonBrightnessUp,exec,   brightness up
+bind=,XF86MonBrightnessDown,exec, brightness down
 
 # Mouse
 bindm = $mod, mouse:272, movewindow
