--- a/shared/.config/hypr/startup.conf
+++ b/shared/.config/hypr/startup.conf
@@ -15,6 +15,7 @@ exec-once=echo -e "select 58:6D:67:30:F6:91\npower off" | bluetoothctl
 
 # launch stuff
 exec-once=hyprpaper
+exec-once=hyprsunset
 exec-once=eww daemon
 exec-once=QT_QPA_PLATFORM=xcb albert 
 exec-once=solaar -w hide
