hyprland: refresh wallpapers

--- a/shared/.config/hypr/hyprpaper.conf
+++ b/shared/.config/hypr/hyprpaper.conf
@@ -1,5 +1,10 @@
-preload = ~/.config/wallpapers/geo-rocket.jpg
-wallpaper = ,~/.config/wallpapers/geo-rocket.jpg
+# preload = ~/.config/wallpapers/geo-rocket.jpg
+# wallpaper = ,~/.config/wallpapers/geo-rocket.jpg
+# preload = ~/Downloads/wave.jpeg
+preload = ~/.config/wallpapers/continuum.jpeg
+preload = ~/.config/wallpapers/sink-or-swim.jpeg
+wallpaper = DP-1,~/.config/wallpapers/continuum.jpeg
+wallpaper = DP-2,~/.config/wallpapers/sink-or-swim.jpeg
 
 splash = false
-ipc=off
+ipc=on
