--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -45,10 +45,11 @@ windowrule=nodim,class:qalculate-gtk
 windowrulev2=noanim,class:^$,title:^$
 windowrulev2=noblur,class:^$,title:^$
 windowrulev2=opacity 1.0 override 1.0 override,class:^$,title:^$
-windowrulev2=noblur,class:^Xdg-desktop-portal-gtk$
-windowrulev2=noanim,class:^Xdg-desktop-portal-gtk$
-windowrulev2=noborder,class:^Xdg-desktop-portal-gtk$
-windowrulev2=noshadow,class:^Xdg-desktop-portal-gtk$
+windowrulev2=noblur,class:^xdg-desktop-portal-gtk$
+windowrulev2=noanim,class:^xdg-desktop-portal-gtk$
+windowrulev2=noborder,class:^xdg-desktop-portal-gtk$
+windowrulev2=noshadow,class:^xdg-desktop-portal-gtk$
+windowrulev2=float,title:(.* Files)
 
 # zen browser
 windowrulev2 = fullscreenstate 0 2,class:(zen)
