hyprland + ghostty: tweak opacity and gaps

--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -1,9 +1,19 @@
 windowrulev2 = suppressevent maximize, class:.*
 
+workspace = w[tv1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
+windowrule = rounding 0, floating:0, onworkspace:w[tv1]
+windowrule = bordersize 0, floating:0, onworkspace:f[1]
+windowrule = rounding 0, floating:0, onworkspace:f[1]
+
 # Special Workspaces
 workspace=special:scratch,gapsin:-50,gapsout:-50
 workspace=special:ask,gapsin:-50,gapsout:-50
 workspace=special:browser,gapsin:-50,gapsout:-50
+
+# Ghostty
+# windowrule=opacity 0.92 0.85 override,class:com.mitchellh.ghostty
 
 # No opacity on media
 windowrule=suppressevent fullscreen,title:Picture\-in\-Picture
@@ -67,10 +77,10 @@ general {
     layout = dwindle
 
     gaps_in = 2
-    gaps_out = 0
+    gaps_out = 5
 
     border_size = 0
-    col.active_border = rgba(fab38755) rgba(f38ba855) 145deg
+    col.active_border = rgba(fab38700)
     col.inactive_border = rgba(000000a0)
 
 }
