hyprland: tweak sizing of popups

--- a/shared/.config/hypr/binds.conf
+++ b/shared/.config/hypr/binds.conf
@@ -10,8 +10,8 @@ bind = $mod,            $enter, exec,   ghostty
 bind = $mod,            b,      exec,   helium
 bind = $mod SHIFT,      b,      exec,   zen
 bind = $mod SHIFT,      $enter, exec,   albert show && sleep 0.1 && hyprctl dispatch killactive && sleep 0.1 && albert show
-bind = $mod,            c,      exec,   [float; center; size 33% 66%]ghostty --initial-command="zsh -c 'nvim -c \"ChatOpen tmp.chat\"' && zsh"
-bind = $mod SHIFT,      c,      exec,   launch-opencode
+bind = $mod,            c,      exec,   [float; center; size 33% 70%]ghostty --initial-command="zsh -c 'nvim -c \"ChatOpen tmp.chat\"' && zsh"
+bind = $mod SHIFT,      c,      exec,   [float; center; size 40% 75%] launch-opencode
 bind = $mod CONTROL,    e,      exec,   [float]nemo
 bind = $mod SHIFT,      s,      exec,   [noanim]hyprshot -m region -o /tmp -f screenshot.png --freeze && sleep 0.1 && satty -f /tmp/screenshot.png -o screenshot.png --copy-command wl-copy --early-exit
 bind = $mod,            o,      exec,   albert show
