--- a/shared/.config/hypr/windows.conf
+++ b/shared/.config/hypr/windows.conf
@@ -59,7 +59,7 @@ windowrulev2=noblur,class:^xdg-desktop-portal-gtk$
 windowrulev2=noanim,class:^xdg-desktop-portal-gtk$
 windowrulev2=noborder,class:^xdg-desktop-portal-gtk$
 windowrulev2=noshadow,class:^xdg-desktop-portal-gtk$
-windowrulev2=float,title:(.* Files)
+windowrulev2=float,title:(.* File.*)
 
 # zen browser
 windowrulev2 = fullscreenstate 0 2,class:(zen)
@@ -121,10 +121,6 @@ misc {
     enable_swallow = false
     # vrr = 1
 }
-
-# cursor {
-#     no_break_fs_vrr = 1
-# }
 
 animations {
     enabled = yes
